--- a/blog.html
+++ b/blog.html
@@ -128,6 +128,7 @@
 			font-size: 1.55rem;
 			margin-bottom: 1rem;
 			color: var(--heading);
+			padding: 1rem;
 		}
 
 		article h3 {
@@ -150,7 +151,6 @@
 			letter-spacing: 0.5px;
 			color: #000;
 			justify-self: center;
-			padding: 1rem;
 		}
 
 		.author {
@@ -247,6 +247,18 @@
 			position: relative;
 		}
 
+		.main-title {
+			text-align: center;
+			font-size: 48px;
+			font-weight: 700;
+			color: #000000;
+			margin-bottom: 15px;
+			font-family: 'Oswald', sans-serif;
+			padding-top: 60px;
+
+			animation: fadeInUp 1s ease-out;
+		}
+
 		.lds-nav .submenu {
 			display: none;
 			position: absolute;
@@ -329,8 +341,133 @@
 	</div>
 
 	<main class="container">
-		<h1 class="blog-title">Legal Design Summit Blog</h1>
+		<h1 class="main-title">Legal Design Summit Blog</h1>
 
+		<article>
+			<h2>LDS Blog #2: From Proposals to Program - Creating the Legal Design Summit 2025</h2>
+			<p>
+				<strong>2025 Legal Design Summit program</strong> is live! In this blog we pull back the curtain and
+				share how we
+				created the program - from our approach to what we learned along the way.
+			</p>
+
+			<h3>How we built the program </h3>
+			<p>
+				First, thank you to the brilliant team: Akvilė, Danielle, Katie, Marielle, Mia, Sade and Serena. For
+				their collective effort over the last six months. It was a pleasure to work with a group of
+				committed volunteers who, each in their own way, brought energy, creativity and curiosity to the
+				process. Say hello and a big thank you when you see them in Helsinki!
+				Building on the momentum of a remarkable 2023 Summit, we set out to do something bold for the fifth
+				LDS: create an ambitious, advanced and future-looking program. To get there, we collaborated across
+				the LDS team, embedded design thinking into our methods, and co-created with our community.
+				Step-by-step, here’s how we built the program:
+			</p>
+
+
+			<h3>1. Brainstorming workshop</h3>
+			<p>
+
+				We kicked things off with a workshop with the LDS team to explore what our audiences needed and
+				brainstorm possible themes. We mapped the legal design landscape through three lenses - the past,
+				present, and future - and explored how those themes met the needs of different audiences, for
+				example academics, practitioners, and participants new to the scene. One interesting thing we
+				highlighted was the opportunity to create a stronger feedback loop between academic research and how
+				legal design is being applied in practice.
+				In addition to being good fun and a bit of an icebreaker for a new team, the workshop also gave us
+				clear direction for the types of proposals we wanted to attract, highlighting themes from AI
+				governance to access to justice to re-designing democracies. The workshop also identified
+				opportunities for new content - this blog being one of them!
+
+			</p>
+
+
+			<h3>2. Call for speakers </h3>
+			<p>
+				We launched a public call for speaking proposals at the end of April 2025. This was open for one
+				month and required submission of a Google form. The form included a series of questions, from
+				motivations for speaking to a short summary of the proposal itself.
+				We received over 70 proposals! The overall quality of the proposal was extremely high and we were
+				impressed with the depth and breadth of the ideas and concepts. Thanks again to everyone who took
+				the time to submit a proposal.
+			</p>
+
+
+			<h3>3. Reviewing proposals </h3>
+			<p>
+				To ensure fairness and quality, we designed a collaborative and robust review process. Every
+				proposal was reviewed independently by at least two team members, using pre-agreed criteria and a
+				shared scoring framework.
+				We prioritised proposals that aligned with themes identified in the workshop and presented new,
+				interesting, and original ideas. We welcomed proposals that were critical of legal design, as we
+				highlighted this as an important intervention for the movement to continue building momentum. We
+				dismissed proposals of a commercial nature.
+				With 22 sessions to fill, we created an exhaustive shortlist of the top performing proposals. It
+				took several brainstorming sessions to discuss the ideas and boil the number of proposals down.
+				Making final decisions was definitely the hardest part of the process. In some cases, we noticed
+				several strong proposals orbiting the same theme, so decided to combine their ideas into joint
+				sessions.
+			</p>
+
+
+			<h3>4. Designing the program and confirming speakers </h3>
+			<p>
+				Once we had our shortlist, we started shaping the full program. We clustered the final set of
+				proposals to find subtle narratives and identify themes that complemented each other. This was
+				critical as we wanted to get the pacing and flow just right - making sure attendees would have a
+				meaningful and engaging arc across the two days. Equally, we ensured a healthy balance between
+				keynote speeches (20 mins) and fireside chats (30 mins), as well as coffee and lunch breaks.
+				We confirmed the final speaker list at the end of May. Where we grouped proposals together, we
+				scheduled calls to facilitate introductions, explain our rationale for creating joint sessions, and
+				discuss their session. One team member commented that:
+				<em> “Creating fireside chats was one of our favorite parts of the process and we loved seeing
+					speakers embrace the LDS spirit. One highlight was a panel meeting for the first time and
+					immediately using a Miro board to find the common threads between their proposals and working
+					collaboratively to brainstorm their session.”</em>
+			</p>
+			<h2>What we created</h2>
+			<p>We think we’ve created an exciting, innovative and diverse program. There are some familiar faces
+				and, of course, returning legends. However, the majority of the program includes new people and
+				perspectives ready to challenge and expand what legal design is and can be. Here’s the unfiltered
+				breakdown across the two days: </p>
+			<li>Day 1 is pure legal design, with a focus on its role and value across the profession. We’ll look at
+				how legal design is shaping policy making, transforming legal services and grappling with generative
+				AI - the sector’s biggest disruptor.</li>
+			<li>Day 2 is about impact, and what legal design can do for people and the planet. The future of law is
+				as much about social and nature value as it is about technology innovation, so sessions touch on big
+				systemic issues, including sustainability, justice and education.</li>
+			<h2>We also created something new: The LDS Gallery </h2>
+			<p>We received so many incredible proposals this year, but unfortunately couldn’t fit everyone on the
+				shortlist into the program. So we’re launching a new platform. A new space to showcase the important
+				and inspirational work that the legal design community is shaping around the world.
+
+				The gallery will be a digital exhibition, initially launched with a select group of contributors,
+				with the aim of exhibiting legal design projects, experiences and case studies. The response so far
+				has been very positive. When confirmed, one contributor said:
+
+				“I’m excited by this new feature and truly appreciate the opportunity to showcase my work in this
+				innovative format.”
+
+				Our ambition is that the Gallery becomes the Louvre of Legal Design, and look forward to sharing the
+				first iteration with you soon.
+			</p>
+			<h2>Final reflections - what we learned</h2>
+			<li>This was less about building an event schedule and more about writing the next chapter in the legal
+				design story </li>
+			<li>The quality, ambition and range of perspectives across the ecosystem is genuinely incredible and
+				inspiring </li>
+			<li>Embedding design thinking into our approach was our most valuable tool </li>
+			<p>Thanks again to everyone involved - see you in Helsinki in September! </p>
+
+			<!--  Author attribution -->
+			<footer class="author">
+				<img src="images/team/team-2025/Humzah Khan Speakers Team.jpeg" alt="Portrait of Humzah Khan" />
+				<p>
+					This post was written by <strong>Humzah Khan</strong>, part of the Legal Design Summit Program
+					and Speakers Team
+				</p>
+			</footer>
+		</article>
+		<br>
 		<div class="tags">
 			<span class="tag">#Selflessness</span>
 			<span class="tag">#Inclusion</span>
@@ -339,7 +476,7 @@
 		</div>
 
 		<article>
-			<h2>The Legal Design Summit: What we stand for as a global movement</h2>
+			<h2>LDS Blog #1: The Legal Design Summit: What we stand for as a global movement</h2>
 			<p>
 				<strong>The Legal Design Summit</strong> began as a movement focused on
 				the end-users of legal services. Thus, the initial focus of the
@@ -458,7 +595,6 @@
 					Legal Design Summit.
 				</p>
 			</footer>
-		</article>
 	</main>
 
 </head>
