update the blog post #2

--- a/blog.html
+++ b/blog.html
@@ -346,7 +346,8 @@
 		<article>
 			<h2>LDS Blog #2: From Proposals to Program - Creating the Legal Design Summit 2025</h2>
 			<p>
-				<strong>2025 Legal Design Summit program</strong> is live! In this blog we pull back the curtain and
+				<a href="program.html"> Legal Design Summit program </a> is live! In this blog we pull back the curtain
+				and
 				share how we
 				created the program - from our approach to what we learned along the way.
 			</p>
